Fix T65613: Memory leak in Audaspace with 3D sound